--- a/release_cfg.json
+++ b/release_cfg.json
@@ -19,14 +19,10 @@
     "logtype": "log4",
     "loglevel": "error",
     "log4_config": {
-      "appenders": [
-        {
-          "type": "file",
-          "filename": "/var/log/liveupdate.log",
-          "maxLogSize": "1048576",
-          "backups": "10"
-        }
-      ]
+	
+		"appenders": { "cheese": { "type": "file", "filename": "../log/liveupdate.log" } },
+		"categories": { "default": { "appenders": ["cheese"], "level": "error" } }
+		
     }
 
   }
